# pianobot

./: .gitignore  .pylintrc  README.md  bot.py  client.py  launcher.py  pyproject.toml  requirements.txt  tables.sql  tracked_guild.txt  tracked_guilds.txt
api/: __init__.py  client.py  exceptions.py  models.py
cogs/: bot.py
cogs/commands/: channel.py  cooldown.py  graph.py  gxp.py  help.py  inactivity.py  member_activity.py  members.py  nickname.py  permissions.py  player_activity.py  prefix.py  role.py  soulpoints.py  sus.py  territories.py  vote.py  xp.py
cogs/db/: connection.py  db_manager.py  guild_activity.py  guild_xp.py  guilds.py  member_activity.py  servers.py  territories.py  worlds.py
cogs/events/: on_command_error.py  on_guild_join.py  on_guild_remove.py  on_ready.py
cogs/tasks/: guild_activity.py  guild_leaderboard.py  guild_xp.py  (+5 more)
commands/: __init__.py  channel.py  cooldown.py  eden.py  graph.py  guild.py  help.py  inactivity.py  leaderboard.py  manage.py  members.py  nickname.py  permissions.py  player.py  player_activity.py  prefix.py  role.py  soulpoints.py  sus.py  territories.py  wynn.py
database/: __init__.py  completions.py  eden.py  global_stats.py  guild_membership.py  guild_metrics.py  guilds.py  players.py  raids.py  schema.sql  snapshots.py  stats_daily.py  tomes.py  tracked_guilds.py  world_state.py  xp_daily.py
events/: on_command_error.py  on_guild_join.py  on_guild_remove.py  on_ready.py
functions/: db.py  inactivity.py  pages.py  permissions.py  table.py  territory.py  update_database.py  worlds.py
pianobot/: __init__.py  bot.py
tasks/: __init__.py  award_cycle.py  guild_processor.py  maintenance.py  poll_eden_guild.py  poll_guild_list.py  poll_online.py  poll_tracked_guilds.py  scheduler.py  territories.py  webhooks.py
utils/: __init__.py  discord.py  formatters.py  tables.py  time.py
views/: __init__.py  paginator.py  reset.py  tome_button.py
(+68 files in other folders)
