[project]
name = "pianobot"
version = "2.0.0"
description = "Utility bot for the Discord server of the Wynncraft Eden guild"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncpg>=0.31.0",
    "discord-py>=2.7.1",
    "matplotlib>=3.10.9",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31.2",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "E", # pycodestyle Error
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "UP", # pyupgrade
    "W", # pycodestyle Warning
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
pretty = true
strict = true
